Fix issue with z-index and text boxes not being clickable without hiding them

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -4,7 +4,7 @@ height:35em;
 width:35em;
 text-align: center; 
 font-size:10vh;
-z-index: 1;
+z-index: 0;
 position: relative;
 }
 .code input{
@@ -21,9 +21,6 @@ position: relative;
 	position: absolute;
 	top:0;
 	left:0;
-}
-#graph{
-	width:35em;
 }
 .drawHolder{
 	display: flex;
